--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Make Gradle Wrapper Executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew assembleRelease
 
