--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Make Gradle Wrapper Executable
-        run: chmod +x ./gradlew
+        run: chmod +x android/gradlew
 
       - name: Build with Gradle
-        run: ./gradlew assembleRelease
+        run: android/gradlew assembleRelease
 
       - name: Upload APK
         uses: actions/upload-artifact@v3
