--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -19,6 +19,14 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install Dependencies
+        run: npm install
+
       - name: Make Gradle Wrapper Executable
         run: chmod +x android/gradlew
 
